--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.3.1",
     "express": "4.17.1",
     "joi": "^17.9.2",
+    "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
     "morgan": "1.10.0"
   },
