--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "joi": "^17.9.2",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.3",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
     "eslint": "7.19.0",
