--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "cross-env": "7.0.3",
     "dotenv": "^16.3.1",
     "express": "4.17.1",
+    "gravatar": "^1.8.2",
+    "http-errors": "^2.0.0",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.7.0",
